--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-PORT = 5000
-ATLAS_URI = mongodb+srv://jadtaha:8JlOTrtdfH1u@cluster0.imrf7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+PORT = 3000
+ATLAS_URI = mongodb+srv://jadtaha:8JlOTrtdfH1u@cluster0.imrf7.mongodb.net/myFirstDatebase?retryWrites=true&w=majority
 
