--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-faq-component": "^1.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "sass": "^1.48.0",
