--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.6.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-faq-component": "^1.3.3",
     "react-router-dom": "^6.3.0",
